--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
         <title>Day 1 website</title>
     </head>
     <body>
-        <h1>
-          hello world  
-        </h1>
+        <h1>hello world</h1>
     </body>
 </html>
